go-web-app/k8s/manifiests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-web-app
  labels:
    app: go-web-app
spec:
  selector:
    app: my-web-app
  ports:
    - protocol: TCP
      port: 80         # Port on which the service is exposed
      targetPort: 8080 # Port on the pod to which traffic is forwarded
  type: ClusterIP       # Type of service (can also be NodePort, LoadBalancer, etc.)
