go-web-app/k8s/manifiests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-web-app
spec:
  rules:
  - host: "go-web-app.local"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: go-web-app
            port:
              number: 80
